--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,3 +13,7 @@ commands:
     description: Check player's alternate accounts
     permission: waiservercore.alts
     permission-message: "§cYou need permission 'unifiedplugin.alts'!"
+  restartnow:
+    description: Немедленно перезагружает сервер
+    usage: /restartnow
+    permission: autorestart.admin
