final code day #2

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -21,6 +21,10 @@ commands:
     description: Set the server's MOTD.
     usage: /setmotd <message>
     permission: setmotd.admin
+  lc:
+    description: Информация о игроке
+    usage: /lc <ник>
+    permission: lc.admin
   titles:
     description: Manage player titles
     usage: /titles [list|set|remove]
