fix system titlesmodule, add system elytraenchantControl, add /settings, отключение предложения обмена титулами, вывод дискорд ссылки, +оформление профиля

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -34,3 +34,13 @@ commands:
       /tradetitles <ник игрока> - отправить запрос на обмен.
       /tradetitles accept - принять запрос.
       /tradetitles decline - отклонить запрос.
+  settings:
+    description: Открывает меню настроек
+    usage: /settings
+  permissions:
+    wai.worldcontrol:
+      description: Доступ к управлению мирами
+      default: op
+  worldcontrol:
+    description: Управление доступом к мирам.
+    usage: /worldcontrol open|close
