--- a/build.gradle
+++ b/build.gradle
@@ -8,49 +8,40 @@ version = '1.0'
 
 repositories {
     mavenCentral()
-    maven {
-        name = "papermc-repo"
-        url = "https://repo.papermc.io/repository/maven-public/"
-    }
-    maven {
-        name = "sonatype"
-        url = "https://oss.sonatype.org/content/groups/public/"
-    }
+    maven { url = "https://repo.papermc.io/repository/maven-public/" }
+    maven { url = "https://oss.sonatype.org/content/groups/public/" }
     maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT")
     implementation 'org.tomlj:tomlj:1.1.1'
+    implementation 'org.antlr:antlr4-runtime:4.13.1' // Добавьте эту строку
     implementation 'org.xerial:sqlite-jdbc:3.49.1.0'
 }
 
-def targetJavaVersion = 21
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release.set(targetJavaVersion)
-    }
-}
-
-processResources {
-    def props = [version: version]
-    inputs.properties props
-    filteringCharset 'UTF-8'
-    filesMatching('plugin.yml') {
-        expand props
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
 shadowJar {
     archiveClassifier.set("")
+    configurations = [project.configurations.runtimeClasspath]
+    dependencies {
+        include(dependency('org.tomlj:.*')) // Включаем все версии tomlj
+        include(dependency('org.antlr:.*')) // Включаем все зависимости antlr
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+    options.release.set(21)
+}
+
+processResources {
+    filesMatching('**/*.toml') {
+        expand project.properties
+    }
 }
